--- a/public/personalizacao-campanhas.html
+++ b/public/personalizacao-campanhas.html
@@ -2,9 +2,9 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/site-exatasis/site-exatasis/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personalização de Campanhas - ExataSIS</title>
+    <title>PersonalizaÃ§Ã£o de Campanhas - ExataSIS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -314,14 +314,14 @@
     <header style="position: fixed; top: 0; left: 0; right: 0; width: 100%; background: linear-gradient(135deg, rgba(10, 26, 46, 0.95) 0%, rgba(22, 33, 62, 0.95) 25%, rgba(30, 58, 95, 0.95) 50%, rgba(45, 90, 135, 0.95) 75%, rgba(26, 75, 115, 0.95) 100%); backdrop-filter: blur(10px); border-bottom: 1px solid rgba(135, 206, 235, 0.2); z-index: 1000; padding: 15px 0;">
         <div style="max-width: 1200px; margin: 0 auto; padding: 0 1.5rem; display: flex; align-items: center; justify-content: space-between;">
             <div style="display: flex; align-items: center;">
-                <a href="/" style="display: flex; align-items: center; text-decoration: none;">
-                    <img src="/exata-head.png" alt="Exata Logo" style="height: 50px; width: auto; transition: all 0.3s ease;">
+                <a href="/site-exatasis/" style="display: flex; align-items: center; text-decoration: none;">
+                    <img src="/site-exatasis/exata-head.png" alt="Exata Logo" style="height: 50px; width: auto; transition: all 0.3s ease;">
                 </a>
             </div>
             <div style="display: flex; align-items: center;">
                 <a href="https://wa.me/5547304315886" target="_blank" rel="noopener noreferrer" style="background: rgba(0, 255, 136, 0.2); color: #00ff88; border: 1px solid rgba(0, 255, 136, 0.3); padding: 10px 20px; border-radius: 6px; font-size: 12px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px; cursor: pointer; transition: all 0.3s ease; display: flex; align-items: center; gap: 8px; box-shadow: 0 2px 8px rgba(0, 255, 136, 0.1); text-decoration: none;">
                     <span style="font-size: 11px;">FALE CONOSCO</span>
-                    <span style="font-size: 14px;">📱</span>
+                    <span style="font-size: 14px;">ðŸ“±</span>
                 </a>
             </div>
         </div>
@@ -331,12 +331,12 @@
       <div class="container">
         <div class="header__content">
           <div class="header__logo" onclick="window.location.href='/'">
-            <img src="/exata-head.png" alt="ExataSIS" class="logo-img">
+            <img src="/site-exatasis/exata-head.png" alt="ExataSIS" class="logo-img">
           </div>
           <div class="header__actions">
             <button class="contact-button">
               <span>FALE CONOSCO</span>
-              <span>📱</span>
+              <span>ðŸ“±</span>
             </button>
           </div>
         </div>
@@ -346,16 +346,16 @@
     <!-- Main Content -->
     <main class="main-content">
       <div class="construction-container">
-        <div class="construction-icon">🚧</div>
-        <h1 class="construction-title">Personalização de Campanhas</h1>
+        <div class="construction-icon">ðŸš§</div>
+        <h1 class="construction-title">PersonalizaÃ§Ã£o de Campanhas</h1>
         <p class="construction-subtitle">
-          Em breve, você poderá criar campanhas totalmente personalizadas! 
-          Design exclusivo, conteúdo sob medida e estratégias adaptadas às suas necessidades.
+          Em breve, vocÃª poderÃ¡ criar campanhas totalmente personalizadas! 
+          Design exclusivo, conteÃºdo sob medida e estratÃ©gias adaptadas Ã s suas necessidades.
         </p>
         <div class="progress-bar">
           <div class="progress-fill"></div>
         </div>
-        <p class="progress-text">Página em construção - Em breve!</p>
+        <p class="progress-text">PÃ¡gina em construÃ§Ã£o - Em breve!</p>
       </div>
     </main>
 
@@ -366,7 +366,7 @@
           <div class="footer__main">
             <div class="footer__contact">
               <p class="contact-item">
-                <strong>Endereço:</strong> Rua Farroupilha, 726 Floresta, Joinville - SC
+                <strong>EndereÃ§o:</strong> Rua Farroupilha, 726 Floresta, Joinville - SC
               </p>
               <p class="contact-item">
                 <strong>Telefone:</strong> +55 47 3043-1586
@@ -393,7 +393,7 @@
           </div>
 
           <div class="footer__bottom">
-            <span class="footer-text">© 2024 ExataSIS - Todos os direitos reservados</span>
+            <span class="footer-text">Â© 2024 ExataSIS - Todos os direitos reservados</span>
           </div>
         </div>
       </div>
