--- a/campanha-pontos.html
+++ b/campanha-pontos.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/site-exatasis/site-exatasis/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/site-exata/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Campanha de Pontos - ExataSIS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -314,8 +314,8 @@
     <header style="position: fixed; top: 0; left: 0; right: 0; width: 100%; background: linear-gradient(135deg, rgba(10, 26, 46, 0.95) 0%, rgba(22, 33, 62, 0.95) 25%, rgba(30, 58, 95, 0.95) 50%, rgba(45, 90, 135, 0.95) 75%, rgba(26, 75, 115, 0.95) 100%); backdrop-filter: blur(10px); border-bottom: 1px solid rgba(135, 206, 235, 0.2); z-index: 1000; padding: 15px 0;">
         <div style="max-width: 1200px; margin: 0 auto; padding: 0 1.5rem; display: flex; align-items: center; justify-content: space-between;">
             <div style="display: flex; align-items: center;">
-                <a href="/site-exatasis/" style="display: flex; align-items: center; text-decoration: none;">
-                    <img src="/site-exatasis/exata-head.png" alt="Exata Logo" style="height: 50px; width: auto; transition: all 0.3s ease;">
+                <a href="/site-exata/" style="display: flex; align-items: center; text-decoration: none;">
+                    <img src="/site-exata/vite.svg" alt="Exata Logo" style="height: 50px; width: auto; transition: all 0.3s ease;">
                 </a>
             </div>
             <div style="display: flex; align-items: center;">
@@ -330,13 +330,13 @@
     <header class="header">
       <div class="container">
         <div class="header__content">
-          <div class="header__logo" onclick="window.location.href='/'">
-            <img src="/site-exatasis/exata-head.png" alt="ExataSIS" class="logo-img">
+          <div class="header__logo" onclick="window.location.href='/site-exata/'">
+            <img src="/site-exata/vite.svg" alt="ExataSIS" class="logo-img">
           </div>
           <div class="header__actions">
             <button class="contact-button">
               <span>FALE CONOSCO</span>
-              <span>ðŸ“±</span>
+              <span>📱</span>
             </button>
           </div>
         </div>
@@ -346,16 +346,16 @@
     <!-- Main Content -->
     <main class="main-content">
       <div class="construction-container">
-        <div class="construction-icon">ðŸš§</div>
+        <div class="construction-icon">🚧</div>
         <h1 class="construction-title">Campanha de Pontos</h1>
         <p class="construction-subtitle">
-          Em breve, vocÃª poderÃ¡ participar de campanhas especiais e acumular pontos incrÃ­veis! 
-          Troque seus pontos por recompensas exclusivas e benefÃ­cios especiais.
+          Em breve, você poderá participar de campanhas especiais e acumular pontos incríveis! 
+          Troque seus pontos por recompensas exclusivas e benefícios especiais.
         </p>
         <div class="progress-bar">
           <div class="progress-fill"></div>
         </div>
-        <p class="progress-text">PÃ¡gina em construÃ§Ã£o - Em breve!</p>
+        <p class="progress-text">Página em construção - Em breve!</p>
       </div>
     </main>
 
@@ -366,7 +366,7 @@
           <div class="footer__main">
             <div class="footer__contact">
               <p class="contact-item">
-                <strong>EndereÃ§o:</strong> Rua Farroupilha, 726 Floresta, Joinville - SC
+                <strong>Endereço:</strong> Rua Farroupilha, 726 Floresta, Joinville - SC
               </p>
               <p class="contact-item">
                 <strong>Telefone:</strong> +55 47 3043-1586
@@ -393,7 +393,7 @@
           </div>
 
           <div class="footer__bottom">
-            <span class="footer-text">Â© 2024 ExataSIS - Todos os direitos reservados</span>
+            <span class="footer-text">© 2024 ExataSIS - Todos os direitos reservados</span>
           </div>
         </div>
       </div>
